--- a/_posts/2018-05-10-aacoin-aat0510.md
+++ b/_posts/2018-05-10-aacoin-aat0510.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      AAT 0510
-subtitle:   AAT 0510
+title:      AAT 有什么用？
+subtitle:   AAT 有什么用？
 date:       2018-05-10
 author:     Aacoin
 header-img: img/post-bg-hacker.jpg
