--- a/_posts/2018-05-02-AAT-有什么用.md
+++ b/_posts/2018-05-02-AAT-有什么用.md
@@ -10,28 +10,36 @@ tags:
     - info
 
 ---
-# 前言
-
-# 常见操作方法介绍
+# AAT 有什么用
 
 
-#### 操作须知
+#### Token
 
-所有的信号（RACSignal）都可以进行操作处理，因为所有操作方法都定义在RACStream.h中，因此只要继承RACStream就有了操作处理方法。
-#### 操作思想
+AAT作为AAcoin的通用Token，承担起平台与社区零距离交互作用。
 
-运用的是Hook（钩子）思想，Hook是一种用于改变API(应用程序编程接口：方法)执行结果的技术.
+#### 手续费折扣
 
-Hook用处：截获API调用的技术。
+AAcoin会根据不同时段，对AAT的拥有者按比例划分会员，最高享受半折手续费优惠。
 
-有关Hook的知识可以看我的这篇博客[《Objective-C Runtime 的一些基本使用》](http://www.jianshu.com/p/ff114e69cc0a)中的 *更换代码的实现方法* 一节,
+#### 平台定期回购
 
-Hook原理：在每次调用一个API返回结果之前，先执行你自己的方法，改变结果的输出。
+每季度盈利20%用于回购AAT平台Token，回购的AAT直接销毁，公开于区块链浏览器。
 
-#### 操作方法
+#### 糖果分发
 
-#### **bind**（绑定）- ReactiveCocoa核心方法
+项目方可以和平台联合空投活动，根据用户持有AAT比例，进行空投。
 
-**ReactiveCocoa** 操作的核心方法是 **bind**（绑定）,而且也是RAC中核心开发方式。之前的开发方式是赋值，而用RAC开发，应该把重心放在绑定，也就是可以在创建一个对象的时候，就绑定好以后想要做的事情，而不是等赋值之后在去做事情。
+#### 申请上市
 
-列如，把数据展示到控件上，之前都是重写控件的 `setModel` 方法，用RAC就可以在一开始创建控件的时候，就绑定好数据。
+项目方可以和平台联合空投活动，根据用户持有AAT比例，进行空投后期随着用户基数扩大，候选项目上平台进行交易，将使用AAT投票决定。
+
+AAcoin Labs:平台最新研发的项目也将让AAT拥有者参与讨论，提意见。采纳后将给予丰富的回报。你可以成为提前知情者。
+
+#### 参与AAcoin业务
+
+平台后续业务会越来越多，需要社区用户不断参与进来，享受分红，手续费返利等等，敬请期待。
+
+#### AAT的具体内容
+
+详见官网白皮书：https://www.aacoin.com/aat#get
+
