--- a/_posts/2018-05-02-AAT-价值.md
+++ b/_posts/2018-05-02-AAT-价值.md
@@ -4,7 +4,7 @@ title:      AAT
 subtitle:   AAT 价值
 date:       2018-05-02
 author:     BY Aacoin
-header-img: img/tag-bg.jpg
+header-img: img/post-about.jpg
 catalog: true
 tags:
     - AAT
