--- a/_posts/2018-05-07-AACOIN-周报.md
+++ b/_posts/2018-05-07-AACOIN-周报.md
@@ -4,7 +4,7 @@ title:      AAcoin平台周报
 subtitle:   AAcoin全球数字资产交易平台周报 [5月6日-5月12日]
 date:       2018-05-07
 author:     BY Aacoin
-header-img: img/tag-bg.jpg
+header-img: img/post-about.jpg
 catalog: true
 tags:
     - 周报
